fix inconsistent gaps in popup search

--- a/src/popup/popup.css
+++ b/src/popup/popup.css
@@ -644,7 +644,6 @@ a:hover i {
     > :first-child {
       margin-top: 0;
     }
-    padding-bottom: var(--outer-padding);
   }
   #search-results {
     order: 3;
